examples/errors/header/missing_x.abc
T:Missing X Field
M:4/4
K:C
% H001: Missing reference number (X:)
CDEF|
